@@ -24,6 +24,7 @@ files[] = handlers/views_handler_field_boolean.inc
 files[] = handlers/views_handler_field_custom.inc
 files[] = handlers/views_handler_field_date.inc
 files[] = handlers/views_handler_field_markup.inc
+files[] = handlers/views_handler_field_math.inc
 files[] = handlers/views_handler_field_numeric.inc
 files[] = handlers/views_handler_field_prerender_list.inc
 files[] = handlers/views_handler_field_url.inc
@@ -229,6 +230,7 @@ files[] = tests/handlers/views_handler_field_boolean.test
 files[] = tests/handlers/views_handler_field_custom.test
 files[] = tests/handlers/views_handler_field_date.test
 files[] = tests/handlers/views_handler_field_file_size.test
+files[] = tests/handlers/views_handler_field_math.test
 files[] = tests/handlers/views_handler_field_url.test
 files[] = tests/handlers/views_handler_field_xss.test
 files[] = tests/handlers/views_handler_filter_date.test
